# Sample-CPP

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/apps/: DummyFinancialApp.cpp  GenericApp.cpp
src/include/: DataReader.h  DummyFinancialApp.h
src/transmitter/: Runner.cpp
src/util/: DataReader.h
test/: CMakeLists.txt  main_runner.cpp
test/apps/: DummyFinancialApp_test.cpp
utils/: runapp.sh
